# zarr-checksum-gallery

./: .pre-commit-config.yaml  Cargo.toml  README.md  time-all.sh
.cargo/: config.toml
.github/workflows/: test.yml
src/: checksum.rs  checksum_json.rs  error.rs  errors.rs  lib.rs  main.rs  util.rs  walkers.rs  zarr.rs
src/checksum/: json.rs  nodes.rs  tree.rs
src/walkers/: breadth_first.rs  collapsio.rs  collapsio0.rs  collapsio_arc.rs  collapsio_mpsc.rs  depth_first.rs  fastasync.rs  fastio.rs  jobstack.rs  listdir.rs  recursive.rs  util.rs  walkd.rs
src/zarr/: entrypath.rs
tests/: walkers.rs
tests/data/: .gitattributes
tests/data/sample.zarr/arr_1/: .zarray  0
tools/: time-all.sh  time-commits.sh
