[package]
name = "zarr-checksum-gallery"
version = "0.1.0"
edition = "2021"
rust-version = "1.61"
description = "Various implementations of Dandi Zarr checksumming"
authors = ["John Thorvald Wodder II <zarr-checksum-gallery@varonathe.org>"]
repository = "https://github.com/jwodder/zarr-checksum-gallery"
license = "MIT"
publish = false

[dependencies]
clap = { version = "3.2.22", default-features = false, features = ["derive", "std", "suggestions", "wrap_help"] }
enum_dispatch = "0.3.8"
fern = "0.6.1"
hex = "0.4.3"
log = "0.4.17"
md-5 = "0.10.4"
num_cpus = "1.13.1"
thiserror = "1.0.36"
tokio = { version = "1.21.1", features = ["fs", "macros", "rt", "rt-multi-thread", "sync"] }
tokio-stream = { version = "0.1.10", features = ["fs"] }
tokio-util = { version = "0.7.4", features = ["io"] }
walkdir = "2.3.2"

[dev-dependencies]
cfg-if = "1.0.0"
fs_extra = "1.2.0"
rstest = { version = "0.15.0", default-features = false }
rstest_reuse = "0.4.0"
tempfile = "3.3.0"
