[package]
name = "zarr-checksum-gallery"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
description = "Various implementations of Dandi Zarr checksumming"
authors = ["John Thorvald Wodder II <zarr-checksum-gallery@varonathe.org>"]
repository = "https://github.com/jwodder/zarr-checksum-gallery"
license = "MIT"
publish = false

[dependencies]
bytes = "1.5.0"
clap = { version = "4.4.8", default-features = false, features = ["derive", "error-context", "help", "std", "suggestions", "usage", "wrap_help"] }
crossbeam = "0.8.2"
enum_dispatch = "0.3.12"
fern = "0.6.2"
fs-err = { version = "2.10.0", features = ["tokio"] }
hex = "0.4.3"
log = "0.4.20"
md-5 = "0.10.6"
termtree = "0.4.1"
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["fs", "io-util", "macros", "rt", "rt-multi-thread", "sync"] }

[dev-dependencies]
assert_matches = "1.5.0"
cfg-if = "1.0.0"
fs_extra = "1.3.0"
rstest = { version = "0.18.2", default-features = false }
rstest_reuse = "0.6.0"
tempfile = "3.8.1"
